Bug 1264396 - Don't allow animation of 'display' property; r=heycam

MozReview-Commit-ID: HOVHXfoFv5l